# z-flash

./: CMakeLists.txt  README.md  zai.json  zbuild.sh
markdowntests/: Chapter 1 - Basics.md  Chapter 2 - User-defined types.md  Chapter 3 - Modularity.md  Chapter 4 - Classes.md  Chapter 5 - Essential Operations.md  Chapter 6 - Template.md
src/: api.cpp  api.h  args.cpp  args.h  main.cpp
